--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,9 @@
     }
    ],
    "source": [
-    "# Load edges into dataframes"
+    "# Load edges into dataframes\n",
+    "df = pd.read_csv('asoiaf-all-edges.csv')\n",
+    "df.head()"
    ]
   },
   {
