Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,11 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create empty instances for each book above"
+    "# Create empty instances for each book above\n",
+    "G = nx.Graph()"
    ]
   },
   {
