Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -186,11 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read edge lists into dataframes"
+    "\n",
+    "# Read edge lists into dataframes\n",
+    "for row in df.index:\n",
+    "    source = df['Source'][row]\n",
+    "    target = df['Target'][row]\n",
+    "    weight = df['weight'][row]\n",
+    "    G.add_edge(source,target, weight=weight)"
    ]
   },
   {
