Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "pd.DataFrame.from_dict(nx.closeness_centrality(G), orient='index').sort_values(by=0, ascending=False).head(10).plot(kind='barh', color=\"#1cf0c7\")\n",
+    "plt.title('Top 10 Characters by Closeness Centrality');"
    ]
   },
   {
