--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "\n",
+    "degrees = nx.degree_centrality(G)\n",
+    "closeness = nx.closeness_centrality(G)\n",
+    "betweeness = nx.betweenness_centrality(G)\n",
+    "eigs = nx.eigenvector_centrality(G)\n",
+    "centrality = pd.DataFrame([degrees, closeness, betweeness, eigs]).transpose()\n",
+    "centrality.columns = [\"degrees\", \"closeness\", \"betweeness\", \"eigs\"]\n",
+    "centrality = centrality.sort_values(by='eigs', ascending=False)\n",
+    "centrality.head()"
    ]
   },
   {
