--- a/index.ipynb
+++ b/index.ipynb
@@ -414,11 +414,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>degrees</th>\n",
+       "      <th>closeness</th>\n",
+       "      <th>betweeness</th>\n",
+       "      <th>eigs</th>\n",
+       "      <th>bridge_proxy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Aggar</th>\n",
+       "      <td>0.005031</td>\n",
+       "      <td>0.269036</td>\n",
+       "      <td>0.007997</td>\n",
+       "      <td>0.001665</td>\n",
+       "      <td>1.589358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alleras</th>\n",
+       "      <td>0.010063</td>\n",
+       "      <td>0.272915</td>\n",
+       "      <td>0.014199</td>\n",
+       "      <td>0.002928</td>\n",
+       "      <td>1.411040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Theon-Greyjoy</th>\n",
+       "      <td>0.083019</td>\n",
+       "      <td>0.423323</td>\n",
+       "      <td>0.111283</td>\n",
+       "      <td>0.102481</td>\n",
+       "      <td>1.340458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jon-Snow</th>\n",
+       "      <td>0.143396</td>\n",
+       "      <td>0.445378</td>\n",
+       "      <td>0.192120</td>\n",
+       "      <td>0.144211</td>\n",
+       "      <td>1.339782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cutjack</th>\n",
+       "      <td>0.003774</td>\n",
+       "      <td>0.255135</td>\n",
+       "      <td>0.005028</td>\n",
+       "      <td>0.001404</td>\n",
+       "      <td>1.332494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Red-Oarsman</th>\n",
+       "      <td>0.003774</td>\n",
+       "      <td>0.261255</td>\n",
+       "      <td>0.005025</td>\n",
+       "      <td>0.001042</td>\n",
+       "      <td>1.331654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Daenerys-Targaryen</th>\n",
+       "      <td>0.091824</td>\n",
+       "      <td>0.383317</td>\n",
+       "      <td>0.118418</td>\n",
+       "      <td>0.063043</td>\n",
+       "      <td>1.289621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Victarion-Greyjoy</th>\n",
+       "      <td>0.030189</td>\n",
+       "      <td>0.333753</td>\n",
+       "      <td>0.036451</td>\n",
+       "      <td>0.009395</td>\n",
+       "      <td>1.207431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pate-(novice)</th>\n",
+       "      <td>0.008805</td>\n",
+       "      <td>0.215097</td>\n",
+       "      <td>0.010042</td>\n",
+       "      <td>0.000175</td>\n",
+       "      <td>1.140428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tyrion-Lannister</th>\n",
+       "      <td>0.153459</td>\n",
+       "      <td>0.476333</td>\n",
+       "      <td>0.162191</td>\n",
+       "      <td>0.251558</td>\n",
+       "      <td>1.056901</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     degrees  closeness  betweeness      eigs  bridge_proxy\n",
+       "Aggar               0.005031   0.269036    0.007997  0.001665      1.589358\n",
+       "Alleras             0.010063   0.272915    0.014199  0.002928      1.411040\n",
+       "Theon-Greyjoy       0.083019   0.423323    0.111283  0.102481      1.340458\n",
+       "Jon-Snow            0.143396   0.445378    0.192120  0.144211      1.339782\n",
+       "Cutjack             0.003774   0.255135    0.005028  0.001404      1.332494\n",
+       "Red-Oarsman         0.003774   0.261255    0.005025  0.001042      1.331654\n",
+       "Daenerys-Targaryen  0.091824   0.383317    0.118418  0.063043      1.289621\n",
+       "Victarion-Greyjoy   0.030189   0.333753    0.036451  0.009395      1.207431\n",
+       "Pate-(novice)       0.008805   0.215097    0.010042  0.000175      1.140428\n",
+       "Tyrion-Lannister    0.153459   0.476333    0.162191  0.251558      1.056901"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "centrality['bridge_proxy'] = centrality['betweeness'] / centrality.degrees\n",
+    "centrality = centrality.sort_values(by='bridge_proxy', ascending=False)\n",
+    "centrality.head(10)"
    ]
   },
   {
@@ -436,7 +570,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "edge_labels = labels = nx.get_edge_attributes(G,'weight')\n",
+    "plt.figure(figsize=(12,12))\n",
+    "nx.draw(G, with_labels=True, pos=nx.spring_layout(G, random_state=10),\n",
+    "        edge_labels=edge_labels, alpha=.8, node_color=\"#1cf0c7\", node_size=700);\n",
+    "nx.draw_networkx_edge_labels(G,pos=nx.spring_layout(G, random_state=10),edge_labels=labels);"
    ]
   },
   {
